force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderEnrollmentAgent/objects/Enrollment__c/Enrollment__c.object-meta.xml
<CustomObject>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Enrollments #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>