force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderEnrollmentAgent/objects/Enrollment__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>