force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderEnrollmentAgent/objects/Enrollment__c/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <label>Last name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>