force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderEnrollmentAgent/objects/Enrollment__c/fields/Plan_Level__c.field-meta.xml
<CustomField>
    <fullName>Plan_Level__c</fullName>
    <label>Plan Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze Plan</fullName>
            </value>
            <value>
                <fullName>Silver Plan</fullName>
            </value>
            <value>
                <fullName>Gold Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>