force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderEnrollmentAgent/objects/Enrollment__c/fields/UCIN_External_ID__c.field-meta.xml
<CustomField>
    <fullName>UCIN_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Cloud Explorer External ID field used to track IDs between systems.</description>
    <externalId>true</externalId>
    <label>UCIN External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>